--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.egg</groupId>
     <artifactId>noticias</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>noticias</name>
     <description>Eggjercicio para inicializar con spring</description>
     <properties>
