--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.egg</groupId>
-    <artifactId>noticias</artifactId>
+    <artifactId>eggnews</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>noticias</name>
+    <name>EggNews</name>
     <description>Eggjercicio para inicializar con spring</description>
     <properties>
         <java.version>1.8</java.version>
