--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>EggNews</name>
-    <description>Eggjercicio para inicializar con spring</description>
+    <description>Initializing with Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
