--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,12 @@
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>5.3.22</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 
     <build>
